--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=PiliTradeMarketplace
-APP_ENV=production
-APP_KEY=base64:e1BYNnLUAXnrrpslaG/c2NWkhyXItdWG3fifo5O2dvM=
-APP_DEBUG=false
-APP_TIMEZONE=Asia/Manila
-APP_URL=http://pilitrademarketplace.vercel.app
+APP_NAME=
+APP_ENV=
+APP_KEY=
+APP_DEBUG=
+APP_TIMEZONE=
+APP_URL=
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=msyql
-DB_HOST=sql206.infinityfree.com
-DB_PORT=3306
-DB_DATABASE=if0_37437713_pilitrademarketplace_db
-DB_USERNAME=if0_37437713
-DB_PASSWORD=FxtAYTm7fX6K3
+DB_CONNECTION=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
