--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=
-APP_ENV=
-APP_KEY=
-APP_DEBUG=
-APP_TIMEZONE=
-APP_URL=
+APP_NAME=PiliTradeMarketplace
+APP_ENV=local
+APP_KEY=base64:e1BYNnLUAXnrrpslaG/c2NWkhyXItdWG3fifo5O2dvM=
+APP_DEBUG=true
+APP_TIMEZONE=UTC
+APP_URL=http://pilitrademarketplace.test/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -19,11 +19,11 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=
-DB_HOST=
-DB_PORT=
-DB_DATABASE=
-DB_USERNAME=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=PiliTradeMarketplace_db
+DB_USERNAME=root
 DB_PASSWORD=
 
 SESSION_DRIVER=database
@@ -46,14 +46,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=587
 MAIL_USERNAME=96b408bb836896
 MAIL_PASSWORD=f92aac57034666
 MAIL_ENCRYPTION=tls
+MAIL_PORT=587
 MAIL_FROM_ADDRESS=info@pilitrademarketplace.test
 MAIL_FROM_NAME="PiliTradeMarketplace"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
